MCA App/Release/MCA Dev Org/src/objects/Processor_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_Field_Label__c</fullName>
        <label>Index Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processor_Name__c</fullName>
        <label>Processor Integration</label>
        <referenceTo>Processor_Integration__c</referenceTo>
        <relationshipLabel>Processor Field Mappings</relationshipLabel>
        <relationshipName>Processor_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Processor Field Mapping</label>
    <nameField>
        <displayFormat>PFM-{00000}</displayFormat>
        <label>Processor Field Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processor Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>